--- a/examples/materials_css.html
+++ b/examples/materials_css.html
@@ -60,7 +60,7 @@
 			<t-style class="fibers"></t-style>
 		</t-mesh>
 		<t-mesh :geometry="new THREE.SphereGeometry( 80, 64, 32 )" :position="{ x: 100, y: -100 }">
-			<t-style class="golf" @set:map="texture.repeat.x = 10; texture.repeat.y = 10;"></t-style>
+			<t-style class="golf" ></t-style>
 		</t-mesh>
 	</t-object3d>
 </t-renderer>
