--- a/examples/materials_css.html
+++ b/examples/materials_css.html
@@ -1,3 +1,5 @@
+<title>materials css</title>
+
 <style>
 	@import url("./style.css");
 </style>
@@ -12,8 +14,6 @@
 		}
 	}
 </script>
-
-<title>CSS</title>
 
 <gui-info>
 	<p>CSS example. Open your inspector, find `t-style` and alter some styles.</p>
