--- a/examples/list.html
+++ b/examples/list.html
@@ -4,23 +4,25 @@
 	@import url("./style.css");
 </style>
 
-<v-container>
-	<h1>Examples</h1>
-	<v-row>
-		<t-example src="./start.html"></t-example>
-		<t-example src="./hello.html"></t-example>
-		<t-example src="./animation.html"></t-example>
-		<t-example src="./geometries.html"></t-example>
-		<t-example src="./controls.html"></t-example>
-		<t-example src="./gui.html"></t-example>
-		<t-example src="./raycast.html"></t-example>
-		<t-example src="./transform.html"></t-example>
-		<t-example src="./overlay.html"></t-example>
-		<t-example src="./models.html"></t-example>
-		<t-example src="./materials.html"></t-example>
-		<t-example src="./materials_css.html"></t-example>
-	</v-row>
-</v-container>
+<main>
+  <v-container>
+    <h1>Examples</h1>
+    <v-row>
+      <t-example src="./start.html"></t-example>
+      <t-example src="./hello.html"></t-example>
+      <t-example src="./animation.html"></t-example>
+      <t-example src="./geometries.html"></t-example>
+      <t-example src="./controls.html"></t-example>
+      <t-example src="./gui.html"></t-example>
+      <t-example src="./raycast.html"></t-example>
+      <t-example src="./transform.html"></t-example>
+      <t-example src="./overlay.html"></t-example>
+      <t-example src="./models.html"></t-example>
+      <t-example src="./materials.html"></t-example>
+      <t-example src="./materials_css.html"></t-example>
+    </v-row>
+  </v-container>
+</main>
 
 <style>
 	/* @import url('./style.css'); */
