better start example

--- a/examples/list.html
+++ b/examples/list.html
@@ -9,6 +9,7 @@
     <h1>Examples</h1>
     <v-row>
       <t-example src="./start.html"></t-example>
+      <t-example src="./start_raw.html"></t-example>
       <t-example src="./hello.html"></t-example>
       <t-example src="./animation.html"></t-example>
       <t-example src="./geometries.html"></t-example>
