--- a/examples/list.html
+++ b/examples/list.html
@@ -11,6 +11,7 @@
       <t-example src="./start.html"></t-example>
       <t-example src="./start_raw.html"></t-example>
       <t-example src="./hello.html"></t-example>
+      <t-example src="./directives.html"></t-example>
       <t-example src="./animation.html"></t-example>
       <t-example src="./geometries.html"></t-example>
       <t-example src="./controls.html"></t-example>
