--- a/examples/directives.html
+++ b/examples/directives.html
@@ -23,7 +23,7 @@
 	</p>
 </gui-info>
 
-<t-renderer>
+<t-renderer orbit>
 	<!-- <t-camera id="cam1" :position="{ x: 4, y:4, z: 4 }" helper></t-camera> -->
   	<!-- <t-orbit camera="#cam1"></t-orbit> -->
 	<t-object
