move start examples

--- a/examples/start/webc.html
+++ b/examples/start/webc.html
@@ -1,7 +1,7 @@
 <title>start</title>
 
 <style>
-  @import url('./style.css');
+  @import url('../style.css');
 </style>
 
 <script type="importmap">
@@ -9,8 +9,8 @@
     "imports": {
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
-      "three-webc": "../src/index.js",
-      "three-webc/": "../"
+      "three-webc": "../../src/index.js",
+      "three-webc/": "../../"
     }
   }
 </script>
