--- a/examples/start/webc.html
+++ b/examples/start/webc.html
@@ -16,6 +16,7 @@
 </script>
 
 <t-renderer orbit>
+  <t-light type="AmbientLight"></t-light>
 	<t-object @mount="new THREE.AmbientLight( 0x404040 )"></t-object>
 	<t-mesh>
 		<t-geometry type="Box"></t-geometry>
