--- a/examples/controls.html
+++ b/examples/controls.html
@@ -15,12 +15,54 @@
 	}
 </script>
 
+<gui-info>
+	<p>Demo on how to switch controls.</p>
+	<p>
+		Available controls are: Arcball, Drag, FirstPerson, Fly, Orbit, PointerLock,
+		Trackball, Transform
+	</p>
+	<a target="_blank" href="https://threejs.org/docs/index.html?q=controls"
+		>more info</a
+	>
+</gui-info>
+
 <t-renderer>
-	<t-hello></t-hello>
-	<t-controls type="FirstPersonControls"></t-controls>
+	<t-camera :position="{ x: 4, y:4, z: 4 }"></t-camera>
+	<t-studio></t-studio>
+	<t-floor :position="{ y: -10 }"></t-floor>
+	<t-object :create="AxesHelper"></t-object>
+
+	<t-controls
+		id="c1"
+		type="Orbit"
+		@mounted="this.object.autoRotate = true"
+	></t-controls>
 </t-renderer>
 
 <script type="module">
 	import "three-webc/three-webc.js";
+	import "three-webc/addons/index.js";
 	import "three-webc/addons/hello.js";
+	import { TYPES } from "three-webc/addons/controls.js";
+	import "three-webc/addons/directives/core.js";
+
+	const { GUI } = await import(
+		"https://cdn.jsdelivr.net/npm/lil-gui@0.17/+esm"
+	);
+	const gui = new GUI();
+
+	const folder = gui;
+	const object = document.querySelector("t-renderer").camera;
+	folder.add(object.position, "x").step(0.1).listen();
+	folder.add(object.position, "y").step(0.1).listen();
+	folder.add(object.position, "z").step(0.1).listen();
+
+	const state = {
+		activeControl: null,
+	};
+
+	folder.add(state, "activeControl", TYPES).onChange((value) => {
+		// manager.active = value;
+		document.querySelector('t-controls').setAttribute('type', value)
+	});
 </script>
