--- a/examples/list.html
+++ b/examples/list.html
@@ -8,8 +8,7 @@
   <v-container>
     <h1>Examples</h1>
     <v-row>
-      <t-example src="./start/webc.html"></t-example>
-      <t-example src="./start/raw.html"></t-example>
+      <t-example src="./start.html"></t-example>
       <t-example src="./hello.html"></t-example>
       <t-example src="./directives.html"></t-example>
       <t-example src="./animation.html"></t-example>
