--- a/examples/animation.html
+++ b/examples/animation.html
@@ -55,7 +55,7 @@
 </gui-info>
 
 <script type="module">
-	import "three-webc/three-webc.js";
+	import "three-webc/index.js";
 	import "three-webc/addons/index.js";
 	import * as EFFECTS from "three-webc/addons/effects.js";
 
