--- a/examples/controls.html
+++ b/examples/controls.html
@@ -40,7 +40,7 @@
 </t-renderer>
 
 <script type="module">
-	import "three-webc/three-webc.js";
+	import "three-webc/index.js";
 	import "three-webc/addons/index.js";
 	import "three-webc/addons/hello.js";
 	import { TYPES } from "three-webc/addons/controls.js";
