--- a/examples/geometries.html
+++ b/examples/geometries.html
@@ -31,7 +31,7 @@
 </gui-info>
 
 <script type="module">
-	import "three-webc/three-webc.js";
+	import "three-webc/index.js";
 	import { GEOMETRIES } from "three-webc/addons/index.js";
 
 	GEOMETRIES.forEach((type, index) => {
