--- a/examples/gui.html
+++ b/examples/gui.html
@@ -23,7 +23,7 @@
 </t-renderer>
 
 <script type="module">
-	import "three-webc/three-webc.js";
+	import "three-webc/index.js";
 	import "three-webc/addons/gui/gui.js";
 	import "three-webc/addons/studio.js";
 	import "three-webc/addons/mesh.js";
