--- a/examples/models.html
+++ b/examples/models.html
@@ -31,7 +31,7 @@
 </t-renderer>
 
 <script type="module">
-  import "three-webc/three-webc.js";
+  import "three-webc";
   import "three-webc/addons/model.js";
   import "three-webc/addons/studio.js";
 
