--- a/examples/list.html
+++ b/examples/list.html
@@ -2,10 +2,19 @@
 
 <style>
 	@import url("./style.css");
+
+  @media (min-width: 900px) {
+  t-example {
+    width: 400px;
+    height: 400px;
+    flex-direction: column;
+    display: flex;
+  }
+}
 </style>
 
 <main>
-  <v-container>
+  <v-container fluid>
     <h1>Examples</h1>
     <v-row>
       <t-example src="./start.html"></t-example>
@@ -33,6 +42,7 @@
 <script>
 	customElements.define(
 		"t-example",
+    
 		class extends HTMLElement {
 			async connectedCallback() {
 				this.innerHTML = `
@@ -40,7 +50,7 @@
 			this.getAttribute("label") || this.getAttribute("src")
 		} <a href="${this.getAttribute("src")}">open</a></h2>
     
-    <iframe width="100%" height="500" loading="lazy" src="${this.getAttribute(
+    <iframe width="100%" height="100%" loading="lazy" src="${this.getAttribute(
 			"src"
 		)}"></iframe>
 `;
