--- a/examples/materials.html
+++ b/examples/materials.html
@@ -85,7 +85,7 @@
 </gui-info>
 
 <script type="module">
-  import "three-webc/three-webc.js";
+  import "three-webc/index.js";
   import "three-webc/addons/object3d.js";
   import "three-webc/addons/mesh.js";
   import "three-webc/addons/material.js";
