--- a/examples/overlay.html
+++ b/examples/overlay.html
@@ -40,7 +40,7 @@
 </t-renderer>
 
 <script type="module">
-  import "three-webc/three-webc.js";
+  import "three-webc";
   import "three-webc/addons/studio.js";
   import "three-webc/addons/mesh.js";
   import "three-webc/addons/effects.js";
