--- a/examples/gui.html
+++ b/examples/gui.html
@@ -24,7 +24,7 @@
 
 <script type="module">
 	import "three-webc/index.js";
-	import "three-webc/addons/gui/gui.js";
+	import "three-webc/addons/gui.js";
 	import "three-webc/addons/studio.js";
 	import "three-webc/addons/mesh.js";
 
